# GraphETM

./: .gitignore  GraphETM.ipynb  KGE.ipynb  README.md  data-processing.ipynb  data.ipynb  pyproject.toml  requirements.txt
deployment/: unix-arm64.sh  unix-x86_64.sh
graphetm/: __init__.py  decoder.py  loss.py  model.py
graphetm/components/: __init__.py  decoder.py  encoder.py  gcn.py
graphetm/trainers/: __init__.py  graphetm_trainer.py
model/: __init__.py  conv_filter.py  decoder.py  encoder.py  etm_model.py  graph_model.py  graphetm.py  graphetm_trainer.py  kge_trainer.py  loss.py  model.py
model/utils/: run_helper.py
utils/: __init__.py  datasets.py
